force-app/main/default/objects/Payment_Transaction__c/Payment_Transaction__c.object-meta.xml
<CustomObject>
    <description
  >Records individual payment transactions (principal, interest, fees) against a Loan Account.</description>
    <label>Payment Transaction</label>
    <nameField>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
        <displayFormat>TXN-{00000000}</displayFormat>
        <startingNumber>10000001</startingNumber>
    </nameField>
    <pluralLabel>Payment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>