force-app/main/default/objects/Payment_Transaction__c/fields/Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account__c</fullName>
    <label>Loan Account</label>
    <referenceTo>Loan_Account__c</referenceTo>
    <relationshipLabel>Payment Transactions</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>MasterDetail</type>
</CustomField>