force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMI Payment</fullName>
            </value>
            <value>
                <fullName>Prepayment</fullName>
            </value>
            <value>
                <fullName>Late Fee</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Disbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>